# origin

02 Структуры и перечисления/Задача 1. Месяцы/: Задача 1. Месяцы.cpp  Задача 1. Месяцы.sln  Задача 1. Месяцы.vcxproj
02 Структуры и перечисления/Задача 2. Счета/: ConsoleApplication8.cpp  ConsoleApplication8.sln  ConsoleApplication8.vcxproj
02 Структуры и перечисления/Задача 3. Вывод структуры/: ConsoleApplication9.cpp  ConsoleApplication9.sln  ConsoleApplication9.vcxproj
03 Классы и объекты/01 Калькулятор двух чисел/: Калькулятор двух чисел.cpp  Калькулятор двух чисел.sln  Калькулятор двух чисел.vcxproj
03 Классы и объекты/02 Счетчик/: Счетчик.cpp  Счетчик.sln  Счетчик.vcxproj  Счетчик.vcxproj.filters
04 ООП абстракция и инкапсуляция/Задача 1. Адреса/: Адреса.cpp  Адреса.sln  Адреса.vcxproj
04 ООП абстракция и инкапсуляция/Задача 2. Сортируем адреса/: out.txt  Сортируем адреса.cpp  Сортируем адреса.sln  Сортируем адреса.vcxproj
05 ООП наследование и полиморфизм/02 Figures Sides and corners/: Figures Sides and corners.cpp  Figures Sides and corners.sln  Figures Sides and corners.vcxproj  Figures Sides and corners.vcxproj.filters
05 ООП наследование и полиморфизм/03 Figures Methods/: ConsoleApplication7.cpp  ConsoleApplication7.sln  ConsoleApplication7.vcxproj
05 ООП наследование и полиморфизм/Задача 1 Фигуры. Количество сторон/: Фигуры. Количество сторон.cpp  Фигуры. Количество сторон.sln  Фигуры. Количество сторон.vcxproj  Фигуры. Количество сторон.vcxproj.filters
06 Многофайловые проекты и библиотеки/01 Math functions/: Functions.cpp  Math functions.cpp  Math functions.sln  Math functions.vcxproj  Math functions.vcxproj.filters  math_power.h
06 Многофайловые проекты и библиотеки/02 Class/: Class.cpp  Class.sln  Class.vcxproj  Class.vcxproj.filters  Header.h  Source.cpp
06 Многофайловые проекты и библиотеки/03 Иерархия классов/: ConsoleApplication2.sln  ConsoleApplication2.vcxproj  Figure.h  Quadrangle.h  Triangle.cpp  isoscelesTriangle.h
07 Препроцессор и макросы/01 Препроцессорные директивы/: Preprocessor directives.cpp  Preprocessor directives.sln  Preprocessor directives.vcxproj  Preprocessor directives.vcxproj.filters
07 Препроцессор и макросы/02 Макрос SUB/: Macro SUB.cpp  Macro SUB.sln  Macro SUB.vcxproj  Macro SUB.vcxproj.filters
08 Исключения и обработка ошибок/01 Простое исключение/: Simple exception.cpp  Simple exception.sln  Simple exception.vcxproj  Simple exception.vcxproj.filters
08 Исключения и обработка ошибок/02 Исключения в конструкторах/: Check.cpp  Check.h  ConsoleApplication2.vcxproj.filters  MySource.cpp  Parallelogram.cpp  Quadrangle.cpp  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  Triangle.cpp  equilateraltriangle.cpp  equilateraltriangle.h  isoscelesTriangle.cpp  rightTriangle.cpp  rightTriangle.h
09 Перегрузка операторов/01 Сравнение дробей/: comparison of fractions.cpp  comparison of fractions.sln  comparison of fractions.vcxproj
09 Перегрузка операторов/02 Остальные операции с дробями/: Other operations with fractions.cpp  Other operations with fractions.sln  Other operations with fractions.vcxproj
10 CMake/01 my_first_cmake_project/: CMakeLists.txt  my_first_cmake_program.cpp
10 CMake/02_More_difficult/: CMakeLists.txt  MySource.cpp  Parallelogram.h  Triangle.h  rightTriangle.cpp
11 Сборка и подключение библиотек/03 Cmake динамическая библиотека/: CMakeLists.txt  Name.h  whatName.cpp
11 Сборка и подключение библиотек/05 Иерархия классов в DLL и CMake/: CMakeLists.txt  DLL_VC++projects.cpp  Figure.h  Parallelogram.h  Quadrangle.h  Rectangle.h  Rhombus.h  Square.h  Triangle.h  equilateraltriangle.h  isoscelesTriangle.h  rightTriangle.h
Cross-platform development with Qt/03 Qt Designer/: CMakeLists.txt
Cross-platform development with Qt/04 Widgets/: CMakeLists.txt  mainwindow.cpp
Cross-platform development with Qt/05 Stopwatch/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Cross-platform development with Qt/06 PreConcurrent/: CMakeLists.txt  mainwindow.cpp
Cross-platform development with Qt/06 QtConcurrent/: CMakeLists.txt  ExampleRace.cpp  ExampleRace.h  mainwindow.cpp  mainwindow.h
Finder/: CMakeLists.txt  Spider.cpp  Spider.h  Table.cpp  Table.h  config.ini  main.cpp
UE5/: CppBaseActor.cpp  CppBaseActor.h
UE5/03 Zoom/: Camera.uproject
Задача 1. Знакомство с Visual Studio 2022/: Задача 1. Знакомство с Visual Studio 2022.cpp  Задача 1. Знакомство с Visual Studio 2022.sln  Задача 1. Знакомство с Visual Studio 2022.vcxproj  Задача 1. Знакомство с Visual Studio 2022.vcxproj.filters
Кросплатформенная разработка на QT/02 Основные модули Qt/: CMakeLists.txt  CMakeLists.txt.user.1a011e1  main.cpp
Кросплатформенная разработка на QT/03 Qt Designer/: main.cpp
Кросплатформенная разработка на QT/04 Widgets/: mainwindow.h  mainwindow.ui  project.pro
Кросплатформенная разработка на QT/05 Stopwatch/: mainwindow.h  stopwatch.cpp
Многопоточное и асинхронное программирование/04 Рефакторинг/: ConsoleApplication6.cpp  ConsoleApplication6.sln  ConsoleApplication6.vcxproj
Многопоточность/01 Очередь клиентов/: The line at the window.vcxproj
Многопоточность/02 Параллельные вычисления/: Parallel calculations.cpp
Продвинутое программирование на C++/01 Лямбда-функция/: Lambda function.cpp  Lambda function.sln  Lambda function.vcxproj
Продвинутое программирование на C++/02 Вариант/: Variant.cpp  Variant.sln  Variant.vcxproj
Продвинутое программирование на C++/02 Под капотом компиляция и линковка/: ConsoleApplication3.cpp  ConsoleApplication3.sln  ConsoleApplication3.vcxproj
Работа с базами данных/04 Работа с PostgreSQL из C++/: CMakeLists.txt  ConsoleApplication1.cpp
Работа с базами данных/04 Работа с PostgreSQL из C++/ConsoleApplication1/: CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
Работа с базами данных/05 С++ и БД ORM/: ConsoleApplication1.cpp  ConsoleApplication1.sln  (+8 more)
Работа с базами данных/05 С++ и БД ORM/02 Wtdbo/: CMakeLists.txt  WTDBO.cpp  WTDBO2.cpp
(+601 files in other folders)
