cmake_minimum_required(VERSION 3.22.0)

project(02_More_difficult)

add_executable(hello_cmake MySource.cpp Figure.cpp Figure.h equilateraltriangle.cpp equilateraltriangle.h isoscelesTriangle.cpp isoscelesTriangle.h Parallelogram.cpp Parallelogram.h Quadrangle.cpp Quadrangle.h Rectangle.cpp Rectangle.h Rhombus.cpp Rhombus.h rightTriangle.cpp rightTriangle.h Square.cpp Square.h Triangle.cpp Triangle.h)



